<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hanhs.mychatapp.SettingActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/avatar"
        app:civ_border_width="2sp"
        app:civ_border_color="@color/colorPrimary"
        android:onClick="showDialogListview"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:text="@string/your_infomation"
        android:textSize="24sp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10sp"
        android:background="@drawable/line"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10sp"
        android:layout_marginTop="0sp"
        android:background="@drawable/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="0sp"
        android:paddingLeft="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Hạnh Nguyễn"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10sp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="hanh.shin.1998@gmail.com"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10sp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/telephone"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="+841658244158"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10sp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/notification"
                android:textSize="18sp" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:paddingRight="15sp" />
        </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/setting_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/corner_round"
            android:layout_marginRight="30dp"
            android:text="Change profile"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorLogin"/>
        <Button
            android:id="@+id/setting_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/corner_round"
            android:text="Change Password"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:textColor="@color/colorLogin"/>
    </LinearLayout>
</LinearLayout>
